--- a/connect4/connect4.css
+++ b/connect4/connect4.css
@@ -66,6 +66,8 @@
     display: none;
     flex-wrap: wrap;
     background-color: rgb(46, 97, 235);
+    border: solid white;
+    border-radius: 30px
 }
 
 #winner-display-red {
@@ -92,22 +94,52 @@
     color: black
 }
 
-.player1 {
+#player1Name {
     margin: auto;
+    display: flex;
     justify-content: center;
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 550;
-    color: red
+    padding: 8px 8px;
+    width: 30%;
+    background-color: rgb(72, 191, 238);
+    border: 4px solid red;
+    border-radius: 100px;
+}
+#p1Submit {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 14px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(72, 191, 238);
+    color: white;
+    border: none
 }
 
-.player2 {
+#player2Name {
     margin: auto;
+    display: flex;
     justify-content: center;
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 550;
-    color: yellow
+    padding: 8px 8px;
+    width: 30%;
+    background-color: rgb(72, 191, 238);
+    border: 4px solid yellow;
+    border-radius: 100px;
+}
+#p2Submit {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 14px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(72, 191, 238);
+    color: white;
+    border: none
 }
