--- a/connect4/connect4.css
+++ b/connect4/connect4.css
@@ -156,3 +156,52 @@
     color: white;
     border: none
 }
+
+#scoreboard {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+}
+
+
+
+#red-score {
+    text-align: left;
+    padding-left: 50px;
+    font-size: 25px;
+    font-weight: 600;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color:rgb(46, 97, 235)
+}
+#yellow-score {
+    text-align: right;
+    padding-right: 30px;
+    font-size: 25px;
+    font-weight: 600;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color:rgb(46, 97, 235)
+}
+
+#score-red {
+    margin: auto;
+    text-align: left;
+    display: flex;
+    justify-content: left;
+    padding-left: 100px;
+    font-size: 50px;
+    font-weight: 600;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color:rgb(46, 97, 235)
+}
+
+#score-yellow {
+    margin: auto;
+    text-align: right;
+    display: flex;
+    justify-content: right;
+    padding-right: 100px;
+    font-size: 50px;
+    font-weight: 600;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color:rgb(46, 97, 235)
+}
