--- a/connect4/connect4.css
+++ b/connect4/connect4.css
@@ -59,7 +59,7 @@
     border-radius: 12px;
 }
 
-#reset-score-button {
+#new-game {
     margin: auto;
     display: flex;
     background-color: rgb(46, 97, 235);
@@ -120,7 +120,7 @@
     border: 4px solid red;
     border-radius: 100px;
 }
-#p1Submit {
+#p1NameReset {
     margin: auto;
     display: flex;
     justify-content: center;
@@ -145,7 +145,7 @@
     border: 4px solid yellow;
     border-radius: 100px;
 }
-#p2Submit {
+#p2NameReset {
     margin: auto;
     display: flex;
     justify-content: center;
@@ -156,52 +156,43 @@
     color: white;
     border: none
 }
-
-#scoreboard {
-    display: flex;
-    justify-content: space-around;
-    align-items: baseline;
-}
-
-
+/* #players {
+    box-sizing: border-box;
+    padding: 20px;
+} */
 
 #red-score {
-    text-align: left;
-    padding-left: 50px;
+    position: absolute;
+    left: 20px;
     font-size: 25px;
     font-weight: 600;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color:rgb(46, 97, 235)
+    color:rgb(46, 97, 235);
 }
+
 #yellow-score {
-    text-align: right;
-    padding-right: 30px;
+    position: absolute;
+    right: 20px;
     font-size: 25px;
     font-weight: 600;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color:rgb(46, 97, 235)
+    color:rgb(46, 97, 235);
 }
 
 #score-red {
-    margin: auto;
-    text-align: left;
-    display: flex;
-    justify-content: left;
-    padding-left: 100px;
-    font-size: 50px;
+    position: absolute;
+    left: 77px;
+    font-size: 25px;
     font-weight: 600;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color:rgb(46, 97, 235)
+    color:rgb(46, 97, 235);
 }
 
 #score-yellow {
-    margin: auto;
-    text-align: right;
-    display: flex;
-    justify-content: right;
-    padding-right: 100px;
-    font-size: 50px;
+    position: absolute;
+    right: 97px;
+    font-size: 25px;
     font-weight: 600;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color:rgb(46, 97, 235)
+    color:rgb(46, 97, 235);
 }
